# coursework_search_vacation_with_DB

./: .gitignore  README.md  config.py  mypy  pyproject.toml  work_file.py
data/: data.json  emp.json  vacancies.json
src/: DBManager.py  db_manager.py  main.py  utils.py  work_file.py
